--- a/shrift.html
+++ b/shrift.html
@@ -47,12 +47,22 @@
 <div class="cards">
     <div class="images2"> <h2>The Road Ahead</h2></div>
 
-    <div class="images2">
+<div class="images2">
+    <div class="image-inner">
         <h2>The Road Ahead</h2>
+        <p>the road ahead might be paved - it might not be.</p>
+        <div class="bottom-info">
+            <div class="profile">
+                <img src="images/f30e26e2af26c724d4cd42d26f31a649.jfif" alt="user">
+                <p>Mat Vogels</p>
+       </div>
+       <p>
+          September 25,2015
+      </p>
+  </div>
+</div>
 </div>
  
-  
-
 
 </body>
 
