--- a/shrift.html
+++ b/shrift.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-   
+
 </head>
-<body> 
-     <header>
+
+<body>
+    <header>
         <h2>Escape.</h2>
         <nav>
             <ul>
@@ -21,48 +23,62 @@
         </nav>
     </header>
     <div class="images">
-         <div class="brightness"></div>
-         <div class="banner-inner">
+        <div class="brightness"></div>
+        <div class="banner-inner">
 
-          <h1>Let's do it together.</h1>
-          <p> We travel the world in search of stories. Come along for the ride.</p>
-          <button> View Latest Posts </button>
+            <h1>Let's do it together.</h1>
+            <p> We travel the world in search of stories. Come along for the ride.</p>
+            <button> View Latest Posts </button>
+        </div>
     </div>
- </div>
-  <div class="menu">
- <nav>
-    <ul>
-        <li><a href="">Nature</a></li>
-        <li><a href="">Photografy</a></li>
-        <li><a href="">Relaxation</a></li>
-        <li><a href="">vacation</a></li>
-        <li><a href="">Travel</a></li>
-        <li><a href="">Adventure</a></li>
-    </ul>
-</nav>
-</div> 
-     <div class="menu2">      
-                <h2>Featured Posts</h2>   
+    <div class="menu">
+        <nav>
+            <ul>
+                <li><a href="">Nature</a></li>
+                <li><a href="">Photografy</a></li>
+                <li><a href="">Relaxation</a></li>
+                <li><a href="">vacation</a></li>
+                <li><a href="">Travel</a></li>
+                <li><a href="">Adventure</a></li>
+            </ul>
+        </nav>
     </div>
-<div class="cards">
-    <div class="images2"> <h2>The Road Ahead</h2></div>
+    <div class="menu2">
+        <h2>Featured Posts</h2>
+    </div>
+    <div class="cards">
+        <div class="images2 picture1">
+            <div class="image-inner">
+                <h2>The Road Ahead</h2>
+                <p>the road ahead might be paved - it might not be.</p>
+                <div class="bottom-info">
+                    <div class="profile">
+                        <img src="images/f30e26e2af26c724d4cd42d26f31a649.jfif" alt="user">
+                        <p>Mat Vogels</p>
+                    </div>
+                    <p>
+                        September 25,2015
+                    </p>
+                </div>
+            </div>
+        </div>
 
-<div class="images2">
-    <div class="image-inner">
-        <h2>The Road Ahead</h2>
-        <p>the road ahead might be paved - it might not be.</p>
-        <div class="bottom-info">
-            <div class="profile">
-                <img src="images/f30e26e2af26c724d4cd42d26f31a649.jfif" alt="user">
-                <p>Mat Vogels</p>
-       </div>
-       <p>
-          September 25,2015
-      </p>
-  </div>
-</div>
-</div>
- 
+            <div class="images2 picture2">
+                <div class="image-inner">
+                    <h2>From Top Down</h2>
+                    <p>once a year,go someplac you've never been befor</p>
+                    <div class="bottom-info">
+                        <div class="profile">
+                            <img src="images/4fe53851d70a6b5cb78a58f5c8a15b5d.jfif" alt="user">
+                            <p>Mat Vogels</p>
+                        </div>
+                        <p>
+                            September 25,2015
+                        </p>
+                    </div>
+                </div>
+            </div>
+
 
 </body>
 
